# tpp-mlir

./: CMakeLists.txt  README.md
.github/workflows/: tpp-benchmark.yml  tpp-llvm.yml  tpp-mlir.yml
benchmarks/: driver.py
benchmarks/config/base/: base.json  mha.json
benchmarks/config/omp/: mlir-vector-amx.json
benchmarks/harness/: controller.py
build_tools/: llvm_version.txt
cmake/modules/: xsmm-dnn.cmake
include/TPP/: PassBundles.td  Passes.h  Passes.td
include/TPP/Runner/: MLIRBench.h
lib/TPP/: CMakeLists.txt  DefaultPipeline.cpp  DefaultTppPasses.cpp
lib/TPP/Conversion/: CMakeLists.txt
lib/TPP/PassBundles/: CMakeLists.txt  LinalgLowering.cpp
lib/TPP/Runner/: MLIRBench.cpp
lib/TPP/Transforms/: CMakeLists.txt  ConstantFoldPack.cpp  LowerPacksAndUnpacks.cpp  LowerPacksAndUnpacksWithoutTranspose.cpp  ToBlockLayoutAndBack.cpp
runtime/: CMakeLists.txt
scripts/: README.md
scripts/ci/: cmake.sh  common.sh
scripts/debug/: README.md  dump_assembly.sh  get_target_features.sh  testquant.sh
scripts/github/: benchmark.sh  build_llvm.sh  build_tpp.sh  check_llvm.sh
test/: lit.cfg.py  lit.site.cfg.py.in
test/Integration/: tile-brgemm-linalg-matmul.mlir  tpp-run-splat-tensor.mlir  vector-contract-to-ukernels-f32.mlir
test/Passes/: lower-packs-and-unpacks-without-transpose.mlir  tpp-runner-wrapper.mlir
tools/: CMakeLists.txt
tools/bench-ref/: CMakeLists.txt
tools/bincmp/: CMakeLists.txt  bincmp.cpp
tools/mlir-gen/: MLIRGen.cpp  MLIRGen.h  mlir-gen.cpp
tools/tpp-opt/: CMakeLists.txt
tools/tpp-run/: CMakeLists.txt  tpp-run.cpp
(+18 files in other folders)
